--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h1>Other</h1>
     <ul>
         <li>
-            <a href="file:///C:/Users/Andalus/Desktop/webcourse/CapstoneP/public/contact.html">
+            <a href="./public/contact.html">
                 Contact Me
             </a>
         </li>
